webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: prod
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
